--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.3",
+    "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.2",
     "formidable": "^3.5.2",
     "next": "15.2.3",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^19",
