--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "form-data": "^4.0.2",
     "formidable": "^3.5.2",
     "next": "15.2.3",
+    "openai": "^4.87.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
