--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.772.0",
     "axios": "^1.8.3",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
